[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OnLines"
version = "2021.1"
authors = [{name = "Jan Berges"}]
description = "Line plots with Python & SVG"
readme = "README.md"
urls = {Homepage = "https://bitbucket.org/berges/OnLines"}
classifiers = [
    "Programming Language :: Python",
    "License :: Freely Distributable",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=2.7"

[tool.setuptools]
py-modules = ['onlines']
