[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OnLines"
version = "2021.1"
authors = [{name = "Jan Berges"}]
description = "Line plots with Python & SVG"
readme = "README.md"
urls = {Homepage = "https://bitbucket.org/berges/OnLines"}
classifiers = [
    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
    "Programming Language :: Python",
]
requires-python = ">=2.7"

[tool.setuptools]
py-modules = ['onlines']
