[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "onlines"
dynamic = ["version"]
authors = [{name = "Jan Berges"}]
description = "Line plots with Python & SVG"
readme = "README.md"
license = {file = "LICENSE"}
urls = {Homepage = "https://bitbucket.org/berges/OnLines"}
classifiers = [
    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
    "Programming Language :: Python",
]
requires-python = ">=2.7"
